@@ -34,7 +34,10 @@ DSD_Target <- function(center_sd =.05, center_weight=.5,
     l
 }
 
-get_points.DSD_Target <- function(x, n=1, assignment = FALSE,...) {
+get_points.DSD_Target <- function(x, n=1, 
+    outofpoints=c("stop", "warn", "ignore"), 
+    assignment = FALSE,...) {
+    
     ### choose point type
     type <- sample(c(NA, 1:2), n, replace=TRUE, 
 	    prob=c(x$noise, (1-x$noise)*x$center_weight,
