@@ -1,0 +1,3 @@
+library("testthat")
+test_package("stream")
+
