@@ -1,7 +1,8 @@
 Changes in version 1.1-0 (xx/xx/14)
     * update now directly dispatches
     * DSC_Memory replaces DSD_Wrapper
-    * DSD_ReadCSV replaces DSD_ReadStream
+    * DSD_ReadCSV replaces DSD_ReadStream. Improved handling of blocking and
+      end of stream.
     * added DSD_ReadDB (DBI interface)
 
 Changes in version 1.0-3 (07/14/14)
